Trying to fix mobile image stretching

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -26,7 +26,7 @@
 }
 
 .projImg{
-  max-height: 100%;
+  height: 100%;
 }
 
 .resumeSec{
